# bert-practice

./: .gitignore  README.md  pyproject.toml
notebooks/: finetune_ner_wiki.ipynb  finetune_sentence_classification.ipynb  ner.ipynb  predict_masked_sentence.ipynb  pretrain_bert.ipynb  sentence_classification.ipynb
src/: predict_masked_sentence.py  pretrain_bert.py  pretrain_robata.py
