[tool.poetry]
name = "bert-practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bert_practice"}]

[tool.poetry.dependencies]
python = "^3.8"
# torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.13.1%2Bcpu-cp38-cp38-linux_x86_64.whl"}
torch = {url = "https://download.pytorch.org/whl/cu117/torch-1.13.1%2Bcu117-cp38-cp38-linux_x86_64.whl"}
fugashi = "1.1"
ipadic = "1.0"
transformers = "^4.25.1"
pytorch-lightning = "^1.8.6"
datasets = "^2.8.0"
apache-beam = "^2.44.0"
accelerate = "^0.15.0"
tensorboard = "^2.11.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
